--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
         // JW Player Setup
         jwplayer("jwplayerDiv").setup({
-            file: "https://1a-1791.com/live/v0xi25uh/slot-111/rgci-lz9s_1080p/chunklist_DVR.m3u8",
+            file: "https://live.tsports.com/mobile_hls/tsports_live_2/index.m3u8",
             autostart: true,
             width: "100%",
             height: "100%",
